objects/tffa__BrandLocation__c.object
<CustomObject>
    <description>A list of locations associated with brand</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the promotion is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the promotion.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Brand__c</fullName>
        <description>Reference to the parent brand object.</description>
        <label>Brand</label>
        <referenceTo>tffa__Brand__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, This the default location</description>
        <label>Default ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of product independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the promotion expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id of the brand as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Location which is linked to the brand</description>
        <label>Location</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Brand Locations</relationshipLabel>
        <relationshipName>BrandLocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the promotion is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Brand Location</label>
    <nameField>
        <displayFormat>BL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>